--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,12 @@
+client_max_body_size 5M;
+
 server {
     listen 80;
     server_name _;
 
     location /static/ {
         alias /usr/src/app/staticfiles/;
+        access_log off;
     }
 
     location /media/ {
@@ -16,5 +19,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_redirect off;
+        proxy_request_buffering off;
     }
 }
