--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,12 @@ Django==6.0.1
 kombu==5.6.2
 packaging==26.0
 prompt_toolkit==3.0.52
+psycopg==3.3.2
 python-dateutil==2.9.0.post0
 redis==7.1.0
 six==1.17.0
 sqlparse==0.5.5
+typing_extensions==4.15.0
 tzdata==2025.3
 tzlocal==5.3.1
 vine==5.1.0
