--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,42 @@
 amqp==5.3.1
+arrow==1.4.0
 asgiref==3.11.0
 billiard==4.2.4
+binaryornot==0.4.4
 celery==5.6.2
+certifi==2026.1.4
+chardet==5.2.0
+charset-normalizer==3.4.4
 click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+cookiecutter==2.6.0
 Django==6.0.1
+django-tailwind==4.4.2
+idna==3.11
+Jinja2==3.1.6
 kombu==5.6.2
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
 packaging==26.0
 prompt_toolkit==3.0.52
 psycopg==3.3.2
+Pygments==2.19.2
+pytailwindcss==0.3.0
 python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+PyYAML==6.0.3
 redis==7.1.0
+requests==2.32.5
+rich==14.3.1
 six==1.17.0
 sqlparse==0.5.5
+text-unidecode==1.3
 typing_extensions==4.15.0
 tzdata==2025.3
 tzlocal==5.3.1
+urllib3==2.6.3
 vine==5.1.0
 wcwidth==0.5.2
