--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ click-plugins==1.1.1.2
 click-repl==0.3.0
 cookiecutter==2.6.0
 Django==6.0.1
+django-environ==0.12.0
 django-tailwind==4.4.2
 idna==3.11
 Jinja2==3.1.6
