--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+psycopg==3.3.2
 Pygments==2.19.2
 pytailwindcss==0.3.0
 python-dateutil==2.9.0.post0
@@ -24,5 +25,6 @@ rich==14.3.1
 six==1.17.0
 sqlparse==0.5.5
 text-unidecode==1.3
+typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
