--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ click-repl==0.3.0
 cookiecutter==2.6.0
 Django==6.0.1
 django-browser-reload==1.21.0
+django-environ==0.12.0
 django-tailwind==4.4.2
 idna==3.11
 Jinja2==3.1.6
@@ -22,6 +23,7 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 packaging==26.0
+pillow==12.1.0
 prompt_toolkit==3.0.52
 psycopg==3.3.2
 Pygments==2.19.2
